--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=Profile
+server.port=6450
+
 f4e.version= 1.0.0
-f4e.endpoint=http://localhost:8080/
+f4e.endpoint=http://localhost:6450/
 
 spring.datasource.url= jdbc:mysql://localhost:3306/f4e?autoReconnect=true&useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
