--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ f4e.endpoint=http://localhost:6450/
 
 spring.datasource.url= jdbc:mysql://localhost:3306/f4e?autoReconnect=true&useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=root@123
+spring.datasource.username=web
+spring.datasource.password=web@f4e
 spring.jpa.hibernate.ddl-auto=
 spring.jpa.show-sql= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
