--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,10 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
 spring.http.multipart.max-file-size=1024MB
 spring.http.multipart.max-request-size=1024MB
 
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+
 spring.session.store-type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
 server.servlet.session.timeout=30m
+
