--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=6450
 f4e.version= 1.0.0
 f4e.endpoint=http://localhost:6450/
 
-spring.datasource.url= jdbc:mysql://host.docker.internal:3306/f4e?autoReconnect=true&useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/f4e?autoReconnect=true&useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=web
 spring.datasource.password=web@f4e
@@ -17,7 +17,7 @@ spring.http.multipart.max-request-size=1024MB
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 
 spring.session.store-type=redis
-spring.redis.host=host.docker.internal
+spring.redis.host=localhost
 spring.redis.port=6379
 server.servlet.session.timeout=30m
 
